Corrigindo um erro no caminho do script.js

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -50,6 +50,6 @@
     </main>
     <footer class="rodape">Feito com muito <a href="desafio.html">♥</a></footer>
 
-    <script type="text/javascript" src="/calculadora/js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
